# dsa-practice

./: .gitignore  rough.html
Algorithm Design/: RandQuickSelect.py  choose.py
CodingNinjas/: TripletSum.cpp  rough.c  rough.cpp
DSA Lab Questions/: ANGusingArray.c  AVLTree.c  AcquireTheKingdoms.c  Another.c  AnotherCardGame.c  BdayBash.c  BinaryStringSearchTrees.c  BinaryStringSearchTrees.cpp  BinaryTreeHeightDiameterDiff.c  BirthdayBash.c  BirthdayBash.cpp  CardGame.c  CardGame.py  CheckAVL.c  ConnectiveCities.c  CourseCompletion.c  Cupcake.c  Cupcake2.c  FarmerAndGoats.c  FileSystem.c  FileSystem.cpp  FireSpreadin.c  FireSpreading.c  Heap.c  HeapSort.c  HideAndSeek.cpp  HideandSeek.c  Huffman.c  KMAG.c  KoneInEgypt.c  KoneMeetsAliens.c  KoneVisitsArtGallery.c  KoneVsLawrence.c  LinkedListandXORs.c  MaxHeap.c  MinHeap.c  MinimumElements.c  NewBSST.c  PalindromicBinaryTree.c  PlantsOnFire.c  (+8 more)
Graphs/: BFSofGraph.cpp  BellmanFord.cpp  BipartiteGraph.cpp  DFSofGraph.cpp  DetectCycleinUGBFS.cpp  DetectCycleinUGDFS.cpp  Dijkstra.cpp  DistanceOfNearestCell.cpp  (+11 more)
RandomRough/: BeautifulMatrix.c  BinaryDeque.c  BinarySearch.h  BirthdayBash.c  BirthdayParty.c  Bit++.c  BoyorGirl.c  Buttons.cpp  CMakeLists.txt  CalculatingFunction.c  DominoPiliing.c  Elephant.c  FromZeroToY.c  HelpfulMaths.cc  MatrixOfDifferences.cpp  MaximumSum.cpp  NextRound.c  OddQueries.cpp  PermutationSwap.cpp  PetyaAndStrings.c  Rough.c  SkiResort.cpp  Team.c  Untitled-1.c  ValeriiAgainstEveryone.py  Waytoolongwords.cpp  Word.c  WordCapitalization.c  function.h  hello.cpp  linearSearch.h  swappings.h
(+782 files in other folders)
