cmake_minimum_required(VERSION 3.24)
project(RandomRough)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(RandomRough
        BinaryDeque.c
        BinarySearch.c
        BirthdayParty.c
        Bit++.c
        DominoPiliing.c
        hello.cpp
        keypad.cc
        NextRound.c
        SebsequentString.cpp
        Team.c
        tempCodeRunnerFile.c
        Waytoolongwords.cpp)
